--- a/drupal/civitest.module.sample
+++ b/drupal/civitest.module.sample
@@ -456,11 +456,37 @@ function civitest_civicrm_mailingGroups( &$form, &$groups, &$mailings ) {
     $mailings[1] = 'This Mailing does not exist';
 }
 
+function _civitest_discountHelper( $eventID, $discountCode ) {
+    $sql = "
+SELECT v.id as id, v.value as value, v.weight as weight
+FROM   civicrm_option_value v,
+       civicrm_option_group g
+WHERE  v.option_group_id = g.id
+AND    v.name = %1
+AND    g.name = %2
+
+";
+    $params = array( 1 => array( $discountCode              , 'String' ),
+                     2 => array( "event_discount_{$eventID}", 'String' ) );
+    $dao = CRM_Core_DAO::executeQuery( $sql, $params );
+    if ( $dao->fetch( ) ) {
+        // ensure discountPercent is a valid numeric number <= 100
+        if ( $dao->value &&
+             is_numeric( $dao->value ) &&
+             $dao->value >= 0 &&
+             $dao->value <= 100 &&
+             is_numeric( $dao->weight ) ) {
+            return array( $dao->id, $dao->value, $dao->weight );
+        }
+    }
+    return array( null, null, null );
+                     
+}
 
 function civitest_civicrm_buildForm( $formName, &$form ) {
     if ( $formName == 'CRM_Event_Form_Registration_Register' &&
          $form->getVar( '_eventId' ) == 3 ) { 
-       $form->addElement( 'text', 'discountCode', ts( 'Discount Code' ) );
+        $form->addElement( 'text', 'discountCode', ts( 'Discount Code' ) );
 
         // also assign to template
         $template =& CRM_Core_Smarty::singleton( );
@@ -470,6 +496,12 @@ function civitest_civicrm_buildForm( $formName, &$form ) {
         }
         $beginHookFormElements[] = 'discountCode';
         $form->assign( 'beginHookFormElements', $beginHookFormElements );
+
+        $discountCode = CRM_Utils_Request::retrieve( 'discountCode', 'String', $form, false, null, $_REQUEST );
+        if ( $discountCode ) {
+            $defaults = array( 'discountCode' => $discountCode );
+            $form->setDefaults( $defaults );
+        }
     }
 }
 
@@ -495,20 +527,9 @@ function civitest_civicrm_buildAmount( $pageType,
         return;
     }
 
-    require_once 'CRM/Core/OptionGroup.php';
-    $discountPercent = CRM_Core_OptionGroup::getValue( "event_discount_{$eventID}", 
-                                                       $discountCode, 'name' );
-
-    if ( ! $discountPercent ||
-         ! is_numeric( $discountPercent ) ||
-         $discountPercent <= 0 ) {
-        return;
-    }
-
-    // make sure code is usable
-    $weight = CRM_Core_OptionGroup::getValue( "event_discount_{$eventID}", 
-                                              $discountCode, 'name', 'String', 'weight' );
-    if ( ! $weight || ( $weight <= 0 ) ) {
+    list( $discountID, $discountPercent, $discountNumber ) = _civitest_discountHelper( $eventID, $discountCode );
+    if ( $discountNumber <= 0 ) {
+        // no more discount left
         return;
     }
 
@@ -535,10 +556,10 @@ function civitest_civicrm_postProcess( $class, &$form ) {
         return;
     }
 
-    require_once 'CRM/Core/OptionGroup.php';
-    $discountID = CRM_Core_OptionGroup::getValue( "event_discount_{$eventID}", 
-                                                  $discountCode, 'name', 'String', 'id' );
-    if ( ! $discountID ) {
+    list( $discountID, $discountPercent, $discountNumber ) = _civitest_discountHelper( $eventID, $discountCode );
+    if ( ! $discountID ||
+         $discountNumber <= 0 ||
+         $discountNumber == 123456789 ) {
         return;
     }
 
@@ -546,10 +567,9 @@ function civitest_civicrm_postProcess( $class, &$form ) {
 UPDATE civicrm_option_value v
 SET    v.weight = v.weight - 1
 WHERE  v.id = %1
-AND    v.weight >= 0
+AND    v.weight > 0
 ";
-
     $params = array( 1 => array( $discountID, 'Integer' ) );
+
     CRM_Core_DAO::executeQuery( $query, $params );
 }
-
