gitignore a new DAO file
git-svn-id: http://svn.civicrm.org/civicrm/trunk@21492 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@ CRM/Core/DAO/Mapping.php
 CRM/Core/DAO/MappingField.php
 CRM/Core/DAO/Menu.php
 CRM/Core/DAO/MessageTemplates.php
+CRM/Core/DAO/Navigation.php
 CRM/Core/DAO/Note.php
 CRM/Core/DAO/OpenID.php
 CRM/Core/DAO/OptionGroup.php
