worked on CRM-4617
git-svn-id: http://svn.civicrm.org/civicrm/trunk@22270 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/drupal/civitest.module.sample
+++ b/drupal/civitest.module.sample
@@ -688,3 +688,14 @@ AND    v.weight > 0
 
     CRM_Core_DAO::executeQuery( $query, $params );
 }
+
+/**
+ * Sample hook to add more shortcuts
+ */
+function civitest_civicrm_shortcuts( &$options ) {
+    // add link to create new profile
+    $options[] = array( 'url'   => '/civicrm/admin/uf/group?action=add&reset=1',
+                        'title' => ts('New Profile'),
+                        'ref'   => 'new-profile');
+    
+}
