--- a/drupal/civitest.module.sample
+++ b/drupal/civitest.module.sample
@@ -699,3 +699,12 @@ function civitest_civicrm_shortcuts( &$options ) {
                         'ref'   => 'new-profile');
     
 }
+
+
+function civitest_civicrm_membershipTypeValues( &$form, &$membershipTypeValues ) {
+    $membershipTypeValues[1]['name']        = 'General (50% discount)';
+    $membershipTypeValues[1]['minimum_fee'] = '50.00';
+
+    $membershipTypeValues[2]['name']        = 'Student (50% discount)';
+    $membershipTypeValues[2]['minimum_fee'] = '25.00';
+}
