worked on CRM-4599
git-svn-id: http://svn.civicrm.org/civicrm/trunk@22465 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/drupal/civitest.module.sample
+++ b/drupal/civitest.module.sample
@@ -708,3 +708,16 @@ function civitest_civicrm_membershipTypeValues( &$form, &$membershipTypeValues )
     $membershipTypeValues[2]['name']        = 'Student (50% discount)';
     $membershipTypeValues[2]['minimum_fee'] = '25.00';
 }
+
+function civitest_civicrm_summary( $contactID, &$content, &$contentPlacement ) {
+    // REPLACE default Contact Summary with your customized content
+    $contentPlacement = 3;
+    $content = "
+<table>
+<tr><th>Hook Data</th></tr>
+<tr><td>Data 1</td></tr>
+<tr><td>Data 2</td></tr>
+</table>
+";
+
+}
