- location fixes as per new format, CRM-4605
git-svn-id: http://svn.civicrm.org/civicrm/trunk@22621 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/drupal/civitest.module.sample
+++ b/drupal/civitest.module.sample
@@ -332,8 +332,8 @@ function civicrm_cck_event_field_values($field, $index = null) {
         foreach ( $eventInfo as $info ) {
             $params = array( 'entity_id' => $info['id'],'entity_table' => 'civicrm_event');
             require_once 'CRM/Core/BAO/Location.php';
-            CRM_Core_BAO_Location::getValues( $params, $values, true );
-            $str = $values['location'][1]['address']['display'];
+            $values['location'] = CRM_Core_BAO_Location::getValues( $params, true );
+            $str = $values['location']['address'][1]['display'];
             $retArray[] = $isAppend ? ("{$info['title']}:: " . $str) : $str;
         }
         break;
