--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,7 @@ CRM/Pledge/DAO
 CRM/Project/DAO
 CRM/Report/DAO
 bin/setup.sh
+civicrm-version.txt
 civicrm.config.php
 l10n
 settings_location.php
@@ -79,6 +80,7 @@ sql/civicrm_acl.mysql
 sql/civicrm_data.??_??.mysql
 sql/civicrm_data.mysql
 sql/civicrm_drop.mysql
+sql/civicrm_navigation.mysql
 sql/civicrm_sample.mysql
 sql/civicrm_standalone.??_??.mysql
 sql/civicrm_standalone.mysql
