finally fix CRM-4631
git-svn-id: http://svn.civicrm.org/civicrm/trunk@23565 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/drupal/civitest.module.sample
+++ b/drupal/civitest.module.sample
@@ -26,7 +26,7 @@ function civitest_civicrm_post( $op, $objectName, $objectId, &$objectRef ) {
 
     $fromName  = 'My Org Administrator';
     $fromEmail = 'from@myorg.org';
-    $from      = CRM_Utils_Mail::encodeAddressHeader( $fromName, $fromEmail );
+    $from      = "$fromName <$fromEmail>";
     
     $toEmail   = $objectRef['email-1'];
     $toName    = "{$objectRef['first_name']} {$objectRef['last_name']}";
