ignore PEAR-related files
git-svn-id: http://svn.civicrm.org/civicrm/branches/v3.1.packages@23825 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/.gitignore
+++ b/.gitignore
@@ -73,6 +73,13 @@ bin/setup.sh
 civicrm-version.txt
 civicrm.config.php
 l10n
+packages/.channels
+packages/.depdb
+packages/.depdblock
+packages/.filemap
+packages/.lock
+packages/.registry
+packages/cache
 settings_location.php
 sql/civicrm.mysql
 sql/civicrm_acl.??_??.mysql
