ignore PEAR-related files
git-svn-id: http://svn.civicrm.org/civicrm/branches/v3.1.packages@23827 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/.gitignore
+++ b/.gitignore
@@ -80,6 +80,7 @@ packages/.filemap
 packages/.lock
 packages/.registry
 packages/cache
+packages/test
 settings_location.php
 sql/civicrm.mysql
 sql/civicrm_acl.??_??.mysql
