CRM-4844 added comments to civitest.module.sample to clarify contactListQuery hook example
git-svn-id: http://svn.civicrm.org/civicrm/branches/v3.0@23837 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/drupal/civitest.module.sample
+++ b/drupal/civitest.module.sample
@@ -718,14 +718,20 @@ function civitest_civicrm_summary( $contactID, &$content, &$contentPlacement ) {
 }
 
 function civitest_civicrm_contactListQuery( &$query, $name, $context, $id ) {
+    // This example limits contacts in my contact reference field lookup to a specific group
+
+    // Connect the hook to your Contact Reference custom field using the field ID (field id is 4 in this case)
     if ( $context == 'customfield' &&
          $id == 4 ) {
+        // Now construct the query to select only the contacts we want
+        // The query must return two columns - contact sort_name, and contact id 
         $query = "
 SELECT c.sort_name, c.id
 FROM civicrm_contact c, civicrm_group_contact cg
 WHERE c.sort_name LIKE '$name%'
 AND   cg.group_id IN ( 4 )
 AND   cg.contact_id = c.id
+AND   cg.status = 'Added'
 ORDER BY c.sort_name ";            
     }
         
