--- a/.gitignore
+++ b/.gitignore
@@ -83,4 +83,5 @@ sql/civicrm_drop.mysql
 sql/civicrm_navigation.mysql
 sql/civicrm_sample.mysql
 templates/CRM/common/version.tpl
+tests/phpunit/CiviTest/civicrm.settings.php
 tools/stats/config.php
