--- a/.gitignore
+++ b/.gitignore
@@ -67,6 +67,7 @@ CRM/Mailing/DAO
 CRM/Mailing/Event/DAO
 CRM/Member/DAO
 CRM/Pledge/DAO
+CRM/Price/DAO
 CRM/Project/DAO
 CRM/Report/DAO
 bin/setup.sh
