git-ignore CRM/Standalone/OpenID/DAO
git-svn-id: http://svn.civicrm.org/civicrm/branches/v3.1.email@24154 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,7 @@ CRM/Pledge/DAO
 CRM/Price/DAO
 CRM/Project/DAO
 CRM/Report/DAO
+CRM/Standalone/OpenID/DAO
 bin/setup.sh
 civicrm-version.txt
 civicrm.config.php
