--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ CRM/Activity/DAO
 CRM/Auction/DAO
 CRM/Case/DAO
 CRM/Contact/DAO/Contact.php
+CRM/Contact/DAO/ContactType.php
 CRM/Contact/DAO/Group.php
 CRM/Contact/DAO/GroupContact.php
 CRM/Contact/DAO/GroupContactCache.php
