shot@sushi:~/CiviCRM/svn/trunk$ svn merge -r 24352:24551 http://svn.civicrm.org/civicrm/branches/v3.0 including CRM-4969, CRM-5155, CRM-5182, CRM-5184, CRM-5192, CRM-5202, CRM-5260, CRM-5265, CRM-5267, CRM-5268, CRM-5270, CRM-5274, CRM-5277, CRM-5278, CRM-5280, CRM-5283 works/fixes
git-svn-id: http://svn.civicrm.org/civicrm/trunk@24552 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/drupal/civitest.module.sample
+++ b/drupal/civitest.module.sample
@@ -736,3 +736,41 @@ ORDER BY c.sort_name ";
     }
         
 }
+
+/**
+ * Hook implementation for altering payment parameters before talking to a payment processor back end.
+ *                                        
+ * @param string $paymentObj
+ *    instance of payment class of the payment processor invoked (e.g., 'CRM_Core_Payment_Dummy')
+ * @param array &$rawParams
+ *    array of params as passed to to the processor
+ * @params array  &$cookedParams
+ *     params after the processor code has translated them into its own key/value pairs
+ * @return void
+ */
+function civitest_civicrm_alterPaymentProcessorParams( $paymentObj,
+                                                       &$rawParams, 
+                                                       &$cookedParams ) {
+    $processorName = get_class( $paymentObj );
+    $mode = $paymentObj->getVar('_mode');
+
+    if ( $processorName == 'CRM_Core_Payment_Dummy' ) {
+        $employer   = empty($rawParams['custom_1']) ? '' : $rawParams['custom_1'];
+        $occupation = empty($rawParams['custom_2']) ? '' : $rawParams['custom_2'];
+        $cookedParams['custom'] = "$employer|$occupation";
+        
+    } else if ( $processorName == 'CRM_Contribute_Payment_AuthorizeNet' ) {
+        //Actual translation for one application:
+        //Employer > Ship to Country (x_ship_to_country)
+        //Occupation > Company (x_company)
+        //Solicitor > Ship-to First Name (x_ship_to_first_name)
+        //Event > Ship-to Last Name (x_ship_to_last_name)
+        //Other > Ship-to Company (x_ship_to_company)
+        
+        $cookedParams['x_ship_to_country']   = $rawParams['custom_1'];
+        $cookedParams['x_company']           = $rawParams['custom_2'];
+        $cookedParams['x_ship_to_last_name'] = $rawParams['accountingCode']; //for now
+        $country_info = da_core_fetch_country_data_by_crm_id($rawParams['country-1']);    
+        $cookedParams['x_ship_to_company']   = $country_info['iso_code'];
+    }
+}
